# LLBSCapture

./: CMakeLists.txt  README.md  example.go  hardcoded.h  library.cpp
src/3pp/: base64.h
src/converter/: converter.cpp  converter.h
src/d3d11Hook/: d3d11Hook.cpp  d3d11Hook.h
src/streamer/: streamer.cpp  streamer.h
src/util/: util.cpp  util.h
